src/App.css
body {
  background-color: #f0f2f5;
}

.logo {
  float: left;
  margin-right: 1em;
}


.nav-menu p {
  padding: 0;
  margin: 0;
}

@media screen and (max-width: 650px) {
  .janeliaLogo {
    display:none;
  }
}

@media screen and (max-width: 850px) {
  .projectLogo {
    display:none;
  }
}

@media screen and (min-width: 650px) {
  .site-layout {
    padding: 0 50px;
  }
}

.janeliaLogo {
  position: absolute;
  top: 0;
  right: 2em;
}

.janeliaLogo img {
  height: 40px;
  margin-top: -7px;
  margin-left: 1em;
}

.site-layout-background {
  background: #fff;
  min-height: 600px;
  padding: 1em;
}

